--- a/server/package.json
+++ b/server/package.json
@@ -7,5 +7,8 @@
     "dev": "node --watch src/index",
     "host": "node --watch src/index",
     "prod": "node src/index"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
