feat(server): set up basic server with express and http, disable x-powered-by and etag tags

--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "node --watch src/index",
@@ -9,6 +9,13 @@
     "prod": "node src/index"
   },
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2"
+  },
+  "imports": {
+    "#config/*": "./src/config/*",
+    "#connection/*": "./src/connection/*",
+    "#middlewares/*": "./src/utils/middlewares/*"
   }
 }
