chore(server): implement jsconfig.json and add route aliases in package.json

--- a/server/jsconfig.json
+++ b/server/jsconfig.json
@@ -4,7 +4,14 @@
 		"paths": {
       "#config/*": ["./src/config/*"],
       "#connection/*": ["./src/connection/*"],
+      "#routes/*": ["./src/routes/*"],
+      "#controllers/*": ["./src/controllers/*"],
+      "#database/*": ["./src/database/*"],
+      "#models/*": ["./src/models/*"],
+      "#helpers/*": ["./src/utils/helpers/*"],
+      "#jwt/*": ["./src/utils/jwt/*"],
       "#middlewares/*": ["./src/utils/middlewares/*"],
+      "#validators/*": ["./src/utils/validators/*"],
 		},
 	},
 	"exclude": ["node_modules", "docs"]
