refactor(server): separate REST http files into modules and move to /api

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,12 @@
 
 # Code directories and files
 node_modules
-original
 dist
 docs
+original
+uploads
+*.jpg
+*.png
 
 # Editor directories and files
 .vscode
