--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -5,6 +5,7 @@
       "@app/*": ["src/app/*"],
       "@store/*": ["src/app/store/*"],
       "@auth/*": ["src/features/auth/*"],
+      "@stories/*": ["src/features/stories/*"],
       "@chat/*": ["src/features/chat/*"],
       "@friends/*": ["src/features/friends/*"],
       "@posts/*": ["src/features/posts/*"],
